--- a/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/static/css/peliculas.css
+++ b/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/static/css/peliculas.css
@@ -6,4 +6,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Created on : 7 mar 2023, 20:09:58
     Author     : Neptune
 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto Slab', serif;
+    box-sizing: border-box;
+}
