--- a/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/templates/crear.html
+++ b/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/templates/crear.html
@@ -4,12 +4,62 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+    <head></head>
     <body>
-        <div>TODO write content</div>
+        <div class="container">
+
+            <div class="card-header bg-black text white"> </div>
+            <div class="card-body">
+
+                <div class="container">
+                    <form th:object ="${sala}"
+                          th:action="@{/save}"
+                          method="POST">
+                        <input type="hidden" th:field="*{id}">
+                        <div class="form-group mb-3 row">
+                            <label class="col-md-2 col-form-label" for="nombre>">Nombre</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control form-control-sm col-md-6" th:field="*{nombre}" placerholder="Nombre Peli" id="nombre" aria-describedby="emailHelp">
+                            </div>
+                        </div>
+
+                        <div class="form-group mb-3 row">
+                            <label class="form-control-sm col-md-2 col-form-label" for="numero_sala>">N°Sala</label>
+                            <div class="col-sm-10">
+                                <input type="text" th:field="*{numero_sala}" class="form-control form-control-sm col-md-6" placerholder="Numero Sala" id="numero_sala" aria-describedby="emailHelp">
+                            </div>
+                        </div>
+
+                        <div class="form-group mb-3 row">
+                            <label class="form-control-sm col-md-2 col-form-label" for="costo_entrada>">Costo</label>
+                            <div class="col-sm-10">
+                                <input type="number" th:field="*{costo_entrada}" class="form-control form-control-sm col-md-6" placerholder="Costo Entrada Peli" id="costo_entrada" aria-describedby="emailHelp">
+                            </div>
+                        </div>
+
+                        <div class="form-group mb-3 row">
+                            <label class="form-control-sm col-md-2 col-form-label" for="fecha>">Fecha</label>
+                            <div class="col-sm-10">
+                                <input type="text" th:field="*{fecha}" class="form-control form-control-sm col-md-6" placerholder="Fecha de la Peli" id="fecha" aria-describedby="emailHelp">
+                            </div>
+                        </div>
+                        <!-- 
+                        <div class="form-group mb-3 row">
+                            <label class="form-control-sm col-md-2 col-form-label" for="paises>">Pais</label>
+                            <div class="col-sm-10">
+                                <select th:field="*{pais}" class="form-control form-control-sm col-md-6" id="pais" aria-describedby="emailHelp">
+                                    <option th:each="x:${paises}"
+                                            th:value="${x.id}"
+                                            th:text="${x.pais}"/>
+                                </select>
+                            </div>
+                        </div>
+                        -->
+                        <br>
+                        <button type="submit" class="btn btn-primary" value="Guardar">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
