--- a/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/templates/peliculas.html
+++ b/Examen 1/Examen_OscarAndrésCastilloIrías/src/main/resources/templates/peliculas.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>Cinelitas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+        <!-- CSS -->
+        <link rel="stylesheet" href="../static/css/peliculas.css"/>
+        <!-- FIN CSS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>    
     </head>
     <body>
-        <div>TODO write content</div>
+        
+        <h1 th:text="${titulo}"></h1>
+        <div class="tabla" >
+            <table class="table table-dark table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Nombre Pelicula</th>
+                        <th scope="col">N°Sala</th>
+                        <th scope="col">Costo</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Eliminar </th>
+                    </tr>
+                </thead>
+                <tbody>
+                <th:block th:each="user : ${sala}">
+                    <tr>
+                        <td th:text="${user.getNombre}"></td>
+                        <td th:text="${user.getNumero_sala}"></td>
+                        <td th:text="${user.getCosto_entrada}"></td>
+                        <td th:text="${user.getFecha}"></td>
+                        <td><a th:href="@{/delete/{id}(id=${user.getId})}">Delete</a></td>
+                    </tr>
+                </th:block>
+                </tbody>       
+            </table>
+            <div class="block">
+                <a href="/pelisN">Agregar Evento</a>
+            </div>
+        </div>
+
     </body>
 </html>
